<resources>
    <string name="app_name">CheckStatus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi_status">Wifi Status</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="switch_on_to_track_the_wifi_and_bluetooth_status">Switch ON to track the Wifi and Bluetooth Status.</string>
    <string name="service">Service</string>
</resources>