<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50_percent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wifi_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/wifi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:text="WiFi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_wifi_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_wifi_title" />

    <TextView
        android:id="@+id/tv_wifi_status"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_wifi_title"
        app:layout_constraintTop_toBottomOf="@id/switch_network_status"
        tools:text="@string/wifi_status" />

    <TextView
        android:id="@+id/tv_bluetooth_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/bluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_50_percent" />

    <Switch
        android:id="@+id/switch_bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bluetooth_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_bluetooth_title" />

    <TextView
        android:id="@+id/tv_bluetooth_status"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bluetooth_title"
        app:layout_constraintTop_toBottomOf="@id/switch_bluetooth_status"
        tools:text="@string/bluetooth_status" />

    <Switch
        android:id="@+id/switch_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:gravity="end|center"
        android:text="@string/service"
        app:layout_constraintBottom_toTopOf="@id/tv_service_status_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_service_status_description"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/switch_on_to_track_the_wifi_and_bluetooth_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/switch_service" />

</androidx.constraintlayout.widget.ConstraintLayout>